5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1577_1328.log
== SUBMITION (2019-03-14 19:21:29) 
-- CODE:
print(20.35)
-- EXECUTION TIME:
0.174824
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
20.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:21:39) 
-- CODE:
print(20x35)
-- EXECUTION TIME:
0.120803
-- ERROR:
  File "/home/codebench/codes/1577/1328/main.py", line 1
    print(20x35)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:21:41) 
-- CODE:
print(20x35)
-- EXECUTION TIME:
0.17067
-- ERROR:
  File "/home/codebench/codes/1577/1328/main.py", line 1
    print(20x35)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:21:48) 
-- CODE:
print(20*35)
-- EXECUTION TIME:
0.175753
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
